# weddipu

./: .gitignore  Cargo.toml
.github/workflows/: main.yml
src/: main.rs
templates/: Gallery.html  Home.html  Login.html  Upload.html
