[package]
name = "upload-index"
version = "0.1.0"
edition = "2021"

[dependencies]
uuid = { version = "1.8.0", features = ["v4"] }
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
tower = {version="0.4",features = ["util"]}
tower-http = { version = "0.5.0", features = ["fs", "trace"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
askama = "0.12"
askama_axum = "0.4"
axum_typed_multipart = "0.12.1"
serde = { version = "1.0", features = ["derive"] }
zip={version = "2"}