[package]
name = "upload-index"
version = "0.1.0"
edition = "2021"

[dependencies]
uuid = { version = "1.8.0", features = ["v4"] }
axum = { version = "0.7.6", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
tower = {version="0.5.1",features = ["util"]}
tower-http = { version = "0.6.1", features = ["fs", "trace"] }
axum-extra = { version = "0.9.4", features = ["typed-header"] }
askama = "0.12"
askama_axum = "0.4"
axum_typed_multipart = "0.12.2"
serde = { version = "1.0", features = ["derive"] }
zip={version = "2"}